now also nested HTML elements will be disabled

--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!doctype html>
 <html ng-app="app">
 <head>
-<script>document.write('<base href="' + document.location + '" />');</script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
 <script src="script.js"></script>
 <link rel="stylesheet" href="style.css">
 </head>
 <body ng-controller="AppController">
 
-    <section>
-        <div ng-controller="AppController">
-            <button class="ui-button" ng-click="toggle()">Toggle disabledState: {{disabledState}}</button>
-            <br>
-            <button class="ui-button" href="#" ui-disabled="disabledState" ng-click="go()">Test button</button>
-            <a class="ui-button" href="http://google.com" target="_blank" ui-disabled="disabledState" ng-click="go()" >Test link</a>
+    <section ng-controller="AppController">
+        <button class="ui-button" ng-click="toggle()">Toggle disabledState: {{disabledState}}</button>
+        <br>
+        <button class="ui-button" href="#" ui-disabled="disabledState" ng-click="go()">Test button</button>
+        <a class="ui-button" href="http://google.com" target="_blank" ui-disabled="disabledState" ng-click="go()" >Test link</a>
+        <br>
+        <p>Nested input fields:</>
+        <div ui-disabled="disabledState">
+            <input type="text" placeholder="first">
+            <input type="text" placeholder="second">
         </div>
     </section>
 
