--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section ng-controller="AppController">
         <button class="ui-button" ng-click="toggle()">Toggle disabledState: {{disabledState}}</button>
         <br>
-        <button class="ui-button" href="#" ui-disabled="disabledState" ng-click="go()">Test button</button>
+        <button class="ui-button" ui-disabled="disabledState" ng-click="go()">Test button</button>
         <a class="ui-button" href="http://google.com" target="_blank" ui-disabled="disabledState" ng-click="go()" >Test link</a>
         <br>
         <p>Nested input fields:</>
