updated documentation and a bit of css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body ng-controller="AppController">
 
     <section ng-controller="AppController">
-        <button class="ui-button" ng-click="toggle()">Toggle disabledState: {{disabledState}}</button>
+        <button class="ui-button" ng-click="toggle()">Click to toggle disabledState: {{disabledState}}</button>
         <br>
         <button class="ui-button" ui-disabled="disabledState" ng-click="go()">Test button</button>
         <a class="ui-button" href="http://google.com" target="_blank" ui-disabled="disabledState" ng-click="go()" >Test link</a>
